# luabind-deboostified

./: .gitignore  CMakeLists.txt  README.md
doc/: GetGitRevisionDescription.cmake
luabind/: CMakeLists.txt  adopt_policy.hpp  back_reference.hpp  class.hpp  config.hpp  container_policy.hpp  copy_policy.hpp  dependency_policy.hpp  discard_result_policy.hpp  error.hpp  exception_handler.hpp  function.hpp  function_introspection.hpp  get_pointer.hpp  handle.hpp  iterator_policy.hpp  lua_argument_proxy.hpp  lua_extensions.hpp  lua_index_proxy.hpp  lua_iterator_proxy.hpp  lua_proxy.hpp  lua_proxy_interface.hpp  luabind.hpp  make_function.hpp  memory_allocator.hpp  no_dependency.hpp  operator.hpp  out_value_policy.hpp  pointer_traits.hpp  raw_policy.hpp  return_reference_to_policy.hpp  scope.hpp  set_package_preload.hpp  shared_ptr_converter.hpp  tag_function.hpp  typeid.hpp  value_wrapper.hpp  wrapper_base.hpp  yield_policy.hpp
luabind/detail/: call.hpp  call_function.hpp  call_member.hpp  call_shared.hpp  call_traits.hpp  class_rep.hpp  constructor.hpp  (+25 more)
src/: CMakeLists.txt  class.cpp  class_info.cpp  class_rep.cpp  error.cpp  function.cpp  function_introspection.cpp  inheritance.cpp  luabind.vcxproj  luabind.vcxproj.filters  object_rep.cpp  scope.cpp  set_package_preload.cpp
test/: CMakeLists.txt  test.hpp  test_abstract_base.cpp  test_adopt.cpp  test_adopt_wrapper.cpp  test_attributes.cpp  test_automatic_smart_ptr.cpp  test_back_reference.cpp  test_builtin_converters.cpp  test_collapse_converter.cpp  test_construction.cpp  test_create_in_thread.cpp  test_dynamic_type.cpp  test_free_functions.cpp  test_held_type.cpp  test_implicit_cast.cpp  test_iterator.cpp  test_lua_classes.cpp  test_lua_proxy.cpp  test_object.cpp  test_operators.cpp  test_policies.cpp  test_private_destructors.cpp  test_shadow.cpp  test_smart_ptr_attributes.cpp  test_tag_function.cpp  test_user_defined_converter.cpp  test_virtual_inheritance.cpp  test_yield.cpp
(+10 files in other folders)
